--- a/index.html
+++ b/index.html
@@ -1,43 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document8</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <style>
-        .divs ~p{
-            color: red;
-        }
+      .divs ~ p {
+        color: red;
+      }
+    table,th,td{
+        border: 1px solid black;
+        border-collapse: collapse;
+      }
     </style>
-     
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- .container>.box#box-${box-$}*10
            ye jo dollar ka symbol use kiye hai wo sequence form m box-1 box-2 karne k liye use kiye hai                          -->
     <div class="container">
-        <div class="box" id="box-1">box-1</div>
-        <div class="box" id="box-2">box-2</div>
-        <div class="box" id="box-3">box-3</div>
-        <div class="box" id="box-4">box-4</div>
-        <div class="box" id="box-5">box-5</div>
+      <div class="box" id="box-1">box-1</div>
+      <div class="box" id="box-2">box-2</div>
+      <div class="box" id="box-3">box-3</div>
+      <div class="box" id="box-4">box-4</div>
+      <div class="box" id="box-5">box-5</div>
     </div>
-  <div class="divs">
-    <p> here is first para</p>
-        <h1>
-            <p>here is last para</p>
-        </h1>
-        <p>this for trail 3</p>
-    
-  </div>
-  <p>here is auto of bond</p>
-  <p>here is new paragraph</p>
-  <div><p>here is typeing</p></div>
-  <p>heekjiias[</p>
-  
-</body>
+    <div class="divs">
+      <p>here is first para</p>
+      <h1>
+        <p>here is last para</p>
+      </h1>
+      <p>this for trail 3</p>
+    </div>
+    <p>here is auto of bond</p>
+    <p>here is new paragraph</p>
+    <div><p>here is typeing</p></div>
+    <p>heekjiias[</p>
+    <img
+      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTh6FFgLviqFJpnmvGKeZlhK5tQP1y_EiceTg&usqp=CAU"
+      alt="flower"
+      width="300"
+      height="200"
+    />
+  <ul style="list-style-type:none ;">
+    <li>coffe</li>
+    <li>tea</li>
+    <li> sahkes</li>
+    <li>bevreges</li>
+  </ul>
 
+  <ol type="i" start="45">
+    <li>apple</li>
+    <li>mango</li>
+    <li>jackfruit</li>
+    <li>pineapple</li>
+  </ol>
+<table >
+    <thead>
+    <tr>
+        <th colspan="2">name</th>
+        <th>class</th>
+        <th>subject</th>
+        <th>email</th>
+        <th>work</th>
+        <th>prfession</th>
+    </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td >djafkhs</td>
+            <td>dsfdsfsd</td>
+            <td>gfser</td>
+            <td>rytht</td>
+            <td>rretf</td>
+            <td>gfdsg</td>
+        </tr>
+    </tbody>
+</table>
+  </body>
 </html>
