--- a/landingpage1.html
+++ b/landingpage1.html
@@ -33,7 +33,7 @@
             <h2>like nature<br><span>Be creative!</span></h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus eligendi non aut in perferendis
                 eaque maiores perspiciatis animi atque? Nemo corrupti sint sit suscipit ipsa ipsam, soluta vel porro
-                accusantium!</p>
+                accusantium</p>
                 <a href="#" class="info-btn">more info</a>
         </div>
     </div>
