--- a/layout.html
+++ b/layout.html
@@ -40,9 +40,9 @@
     </div>
 </div>
    </footer>
-   <section>
-    <div style="display:inline-block; width:33%"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT96A3DC8SZMb_Qexw6fiFlCIHzM-Vl5UgrKQ&usqp=CAU" alt="j;usas" width="100%"></div>
-    <div style="display:inline-block; width:33%"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQXWNW1IKdC18whSr8PT6CgcpgJmlpMXrGdZQ&usqp=CAU" alt="hsuhos" width="100%"></div>
+   <section style="height: 100%;">
+    <div style="display:inline-block; width:33%; object-fit:contain"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT96A3DC8SZMb_Qexw6fiFlCIHzM-Vl5UgrKQ&usqp=CAU" alt="j;usas" width="100%"></div>
+    <div style="display:inline-block; width:33%; object-fit:contain"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQXWNW1IKdC18whSr8PT6CgcpgJmlpMXrGdZQ&usqp=CAU" alt="hsuhos" width="100%"></div>
     <div style="display:inline-block; width:3%"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTEYkB2GKOC6PPxr5njFAaDb93Hk0tVg5DhgA&usqp=CAU" alt="flower" width="100%"></div>
    </section>
    <script>
